column merging code update

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -4402,7 +4402,10 @@
    "outputs": [],
    "source": [
     "#Merge all four columns to one column 'dog'. \n",
-    "twitter_archive_copy['dog']= twitter_archive_copy['doggo'].astype('object')+' '+twitter_archive_copy['floofer'].astype('object')+' '+twitter_archive_copy['pupper']+' '+twitter_archive_copy['puppo'].astype('object')\n"
+    "twitter_archive_copy['dog']= twitter_archive_copy['doggo'].astype('object')+' '\n",
+    "                             +twitter_archive_copy['floofer'].astype('object')+' '\n",
+    "                             +twitter_archive_copy['pupper']+' '\n",
+    "                            +twitter_archive_copy['puppo'].astype('object')\n"
    ]
   },
   {
